<resources>
    <string name="app_name">Local Wallet</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="send">send</string>
    <string name="howMuchSend">How much send?</string>
    <string name="request">request</string>
    <string name="howMuchRequest">How much request?</string>
    <string name="amount">Amount:</string>
    <string name="received">Received:</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="read">Read</string>
</resources>